# jarvis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp  readme.md
brain/: NeuronCore.cpp  NeuronCore.h
node/: Dockerfile  Gruntfile.js  binding.gyp  bower.json  index.html  package.json
node/app/: app.component.ts  app.config.js  app.env.config.js  app.module.js  app.module.ts  app.route.js  electron.js  index.html  main.js  test.js
node/app/common/controllers/: datepicker.controller.js
node/app/common/services/: grid.service.js
node/app/i18n/: locale-pt-BR.json
node/app/keywords/: keyword.component.ts  keyword.service.ts  keyword.ts  mock-keyword.ts
node/app/layout/css/: main.css  menu.css
node/app/layout/menu/: alertas-topo.controller.js  menu-icones-topo.html  menu.ctrl.js  menu.html
node/app/modules/core/: core.module.js
node/app/modules/main/: main.controller.js  main.html  main.module.js
node/app/modules/neural_net/: neura_net.controller.js  neura_net.edit.controller.js  neura_net.edit.html  neura_net.edit.main.controller.js  neura_net.edit.main.html  neura_net.extController.js  neura_net.html  neura_net.modal.controller.js  neura_net.module.js  neura_net.route.js  neura_net.service.js  neural_net.controller.js  neural_net.edit.controller.js  neural_net.edit.html  neural_net.edit.main.controller.js  neural_net.edit.main.html  neural_net.extController.js  neural_net.html  neural_net.modal.controller.js  neural_net.module.js  neural_net.route.js  neural_net.service.js
node/app/modules/neural_net/components/: neura_net.grid.cell.delete.html  neura_net.grid.cell.detalhar.html  neura_net.grid.cell.edit.html  neura_net.modal.html  neura_net.table.html  neural_net.fieldset.html  neural_net.filter.html  neural_net.grid.cell.delete.html  neural_net.grid.cell.detalhar.html  neural_net.grid.cell.edit.html  neural_net.modal.html  neural_net.readonly.html  neural_net.table.html
node/app/modules/neural_net/details/: neura_net.child.controller.js  neura_net.child.html  neural_net.child.controller.js  neural_net.child.html
node/app/modules/neural_net/directives/: neura_net.fieldset.directive.js  neura_net.fieldset.html  neura_net.fieldset.js  neura_net.select.directive.js  neura_net.select.html  neura_net.select.js  neural_net.fieldset.directive.js
node/app/scripts/controllers/: MainController.js
node/app/scripts/controllers/monitor/: MonitorController.js
node/app/scripts/directives/: directives.js
node/app/scripts/service/monitor/: MonitorService.js
node/app/scripts/service/support/: constants.js  utils.js
node/config/environments/: dist.json
node/test/: test.js
py/: teste.py
resources/: application.cfg  ddl.sql  ogre.cfg
resources/database/: ddl.sql  fann.database
resources/etl/: example1.ktr
resources/meta/: config.cfg  config.toml
resources/meta/data/: stopwords_pt_google.txt
resources/meta/data/portuguese/: stop.txt
resources/test/: ciencia.txt  stop.txt
scripts/: main.js  package.json  test.js
src/: domain.hpp  jarvis.cpp  main.cpp
src/brain/: Brain.cpp  Brain.h  CMakeLists.txt  ICommand.hpp  INeuronConnection.hpp  INeuronCore.hpp  INeuronGroup.hpp  NeuronConnection.hpp  NeuronCore.cpp  NeuronCore.h  NeuronCore.hpp  NeuronGroup.cpp  NeuronGroup.h  NeuronGroup.hpp  NeuronGroupBuilder.cpp  NeuronGroupBuilder.h  NeuronGroupBuilder.hpp
src/client/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Jarvis.cpp  Jarvis.h  JarvisApplication.cpp  JarvisApplication.h
src/core/: Application.hpp  command.hpp  identifiable.h  identifiable.hpp  syntax_shugar.hpp
src/domain/: Corpus.hpp  Document.hpp  TextData.hpp  TextDocument.hpp  Word.hpp
src/main/cpp/: NeuronCore.cpp  main.cpp
src/main/headers/: NeuronCore.h  identifiable.h
src/meta/: DefaultRequestHandler.hpp  TextAnalysis.hpp
src/repository/: BaseRepository.hpp  CMakeLists.txt  CorpusRepository.hpp  DocumentRepository.hpp  KeywordRepository.hpp  NetworkRepository.hpp  Page.hpp  StopWordRepository.hpp  TextRepository.hpp  WordRepository.hpp  repository.cpp  repository.hpp
src/repository/pagination/: Pageable.hpp
src/server/: CMakeLists.txt  CorpusHandler.hpp  FannHandler.hpp  MainRequestHandler.hpp  TrainingDataService.hpp  server.cpp  server.h  server.hpp
src/service/: TextService.hpp
test/: CMakeLists.txt  NeuronBuilderTest.cpp  NeuronTest.cpp
test/brain/: CMakeLists.txt  NeuronBuilderTest.cpp  NeuronTest.cpp
test/fann/: CMakeLists.txt  fann_test.cpp
test/meta/: CMakeLists.txt  MetaTest.cpp
test/mpi/: CMakeLists.txt  NeuronsOnMPITest.cpp
test/repository/: CMakeLists.txt  DocumentRepositoryTest.cpp  KeywordRepositoryTest.cpp  RepositoryTest.cpp  StopWordRepositoryTest.cpp  TextRepositoryTest.cpp  WordRepositoryTest.cpp
test/text/: CMakeLists.txt  TextProccessTest.cpp  TextServiceSuite.cpp
voice/: Voice.cpp  Voice.h
